--- a/src/template.html
+++ b/src/template.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
     <title>{% block title %}{% endblock %}</title>
-    <meta name="keywords" content="德速,物流,互联网" />
-    <meta name="description" content="德速电商物流" />
+    <meta name="keywords" content="德速电商物流,广州亚马逊FBA头程空运,广州亚马逊FBA头程海运,广州亚马逊FBA国际快递,广州亚马逊FBA海外仓,广州亚马逊FBA退货换标服务,德速供应链,德速物流供应链" />
+    <meta name="description" content="德讯信息技术（广州）有限公司专注提供全球FBA头程空运、海运，国际快递和海外仓服务，业务范围覆盖全球各国各地区-广州亚马逊FBA头程空运_广州亚马逊FBA头程海运_广州亚马逊FBA国际快递_广州亚马逊FBA海外仓_广州亚马逊FBA退货换标服务_德速供应链_德速物流供应链。" />
     {% block css %}{% endblock %}
 </head>
 
